--- a/erc.html
+++ b/erc.html
@@ -131,7 +131,7 @@ K. Jochmans. <a href="publications/ivpoisson/ivpoisson.pdf">Bias in instrumental
 
 <p> 
 K. Jochmans. 
-<a href="preprints/rassign/exclusionbias.pdf">Testing random assignment to peer groups</a>. Preprint, 2020.
+<a href="preprints/rassign/exclusionbias.pdf">Testing random assignment to peer groups</a>. Forthcoming in <i>Journal of Applied Econometrics</i>, 2022+.
 </p> 
 		
 <p> 
