--- a/preprints.html
+++ b/preprints.html
@@ -64,7 +64,7 @@
 [<a href="preprints/blockmodel/blockmodel_supplement.pdf">supplement</a>]
 
 <br><br>
-<a href="preprints/markov/dynamics.pdf">Identification of mixtures of dynamic discrete choices</a>. Under revision for <i>Journal of Econometrics</i>. (with Ayden Higgins)
+<a href="preprints/markov/dynamics.pdf">Identification of mixtures of dynamic discrete choices</a>. Resubmitted to <i>Journal of Econometrics</i>. (with Ayden Higgins)
 
 <br><br>
 <a href="preprints/AJADE/JASYD.pdf">Joint approximate asymmetric diagonalization by non-orthogonal matrices</a>. (with Ayden Higgins)
