--- a/preprints.html
+++ b/preprints.html
@@ -56,7 +56,7 @@
 <a href="preprints/markov/markov switching.pdf">Learning Markov processes with latent variables from longitudinal data</a>. (with Ayden Higgins)
 
 <br><br>
-<a href="preprints/panel bootstrap/panel_bstrap.pdf">Bootstrap inference for fixed-effect models</a>. Under revision for <i>Econometrica</i>. (with Ayden Higgins)	
+<a href="preprints/panel bootstrap/panel_bstrap.pdf">Bootstrap inference for fixed-effect models</a>. Resubmitted to <i>Econometrica</i>. (with Ayden Higgins)	
 [<a href="preprints/panel bootstrap/panel_bstrap_supplement.pdf">supplement</a>]
 	
 <br><br>	
