--- a/publications.html
+++ b/publications.html
@@ -54,15 +54,16 @@
 <p>
 
 
-<a href="publication/rassign/exclusionbias.pdf">Testing random assignment to peer groups</a>. <i>Journal of Applied Econometrics</i>, forthcoming.
-[<a href="publications/rassign/exclusionbias appendix.pdf">supplement</a>,
-<a href="publications/rassign/rassign.zip">Stata implementation and replication files</a>]
-
-<br><br>	
+	
 <a href="publications/peer effects/interference.pdf">Peer effects and endogenous social interactions</a>. <i>Journal of Econometrics</i>, forthcoming. [<a href="publications/peer effects/matlab.zip">replication files</a>, <a href="publications/peer effects/ivnet.zip">Stata implementation</a>, <a href="publications/peer effects/DGP.do">dgp.do for Stata help file</a>]
 
 <br><br>	
 <a href="publications/noise/noise_revision.pdf">Inference on a distribution from noisy draws</a>. <i>Econometric Theory</i>, forthcoming. (with Martin Weidner)
+
+<br><br>
+<a href="publication/rassign/exclusionbias.pdf">Testing random assignment to peer groups</a>. <i>Journal of Applied Econometrics</i> 38, 321-333.
+[<a href="publications/rassign/exclusionbias appendix.pdf">supplement</a>,
+<a href="publications/rassign/rassign.zip">Stata implementation and replication files</a>]
 			
 <br><br>	
 <a href="publications/ivgravity/twgravityiv.pdf">Instrumental-variable estimation of exponential regression models with two-way fixed effects, with an application to gravity equations</a>. <i>Journal of Applied Econometrics</i> 37, 1121–1137. (with Vincenzo Verardi)
