--- a/erc.html
+++ b/erc.html
@@ -95,7 +95,7 @@ A. Higgins and K. Jochmans.
 
 <p> 	
 A. Higgins and K. Jochmans. 
-<a href="preprints/markov/dynamics.pdf">Identification of mixtures of dynamic discrete choices</a>. Preprint, 2021.
+<a href="preprints/markov/dynamics.pdf">Identification of mixtures of dynamic discrete choices</a>. Forthcoming in <i>Journal of Econometrics</i>, 2023+.
 </p> 
 	
 <p> 
