--- a/publications.html
+++ b/publications.html
@@ -54,7 +54,11 @@
 <p>
 
 
-	
+
+
+<a href="preprints/markov/dynamics.pdf">Identification of mixtures of dynamic discrete choices</a>. <i>Journal of Econometrics</i>, forthcoming. (with Ayden Higgins)
+
+<br><br>	
 <a href="publications/peer effects/interference.pdf">Peer effects and endogenous social interactions</a>. <i>Journal of Econometrics</i>, forthcoming. [<a href="publications/peer effects/matlab.zip">replication files</a>, <a href="publications/peer effects/ivnet.zip">Stata implementation</a>, <a href="publications/peer effects/DGP.do">dgp.do for Stata help file</a>]
 
 <br><br>	
