--- a/erc.html
+++ b/erc.html
@@ -105,7 +105,7 @@ A. Higgins and K. Jochmans.
 
 <p> 
 K. Jochmans
-<a href="preprints/peer effects/interference.pdf">Peer effects and endogenous social interactions</a>. Forthcoming in <i>Journal of Econometrics</i>, 2022+.
+<a href="preprints/peer effects/interference.pdf">Peer effects and endogenous social interactions</a>. <i>Journal of Econometrics</i> 235, 1203-1214.
 </p>
 
 <p> 
@@ -118,7 +118,7 @@ K. Jochmans and M. Weidner. <a href="publications/noise/noise_revision.pdf">Infe
 </p> 
 	
 <p> 
-K. Jochmans and V. Verardi. <a href="publications/ivgravity/twgravityiv.pdf">Instrumental-variable estimation of exponential regression models with two-way fixed effects, with an application to gravity equations</a>. Forthcoming in <i>Journal of Applied Econometrics</i>, 2022+.
+K. Jochmans and V. Verardi. <a href="publications/ivgravity/twgravityiv.pdf">Instrumental-variable estimation of exponential regression models with two-way fixed effects, with an application to gravity equations</a>. <i>Journal of Applied Econometrics</i> 37, 1121–1137.
 </p> 
 	
 <p> 
@@ -131,7 +131,7 @@ K. Jochmans. <a href="publications/ivpoisson/ivpoisson.pdf">Bias in instrumental
 
 <p> 
 K. Jochmans. 
-<a href="preprints/rassign/exclusionbias.pdf">Testing random assignment to peer groups</a>. Forthcoming in <i>Journal of Applied Econometrics</i>, 2022+.
+<a href="preprints/rassign/exclusionbias.pdf">Testing random assignment to peer groups</a>. <i>Journal of Applied Econometrics</i> 38, 321-333.
 </p> 
 		
 <p> 
@@ -160,7 +160,7 @@ K. Jochmans and T. Otsu. <a href="publications/two-way likelihood corrections/li
 
 <p> 
 K. Jochmans. 
-<a href="preprints/dyadic/beta_model.pdf">Modified-likelihood estimation of fixed-effect models for dyadic data</a>. Preprint, 2018.
+<a href="publications/dyadic/SERIEs.pdf">Modified-likelihood estimation of fixed-effect models for dyadic data</a>. Forthcoming in <i>SERIEs - Journal of the Spanish Economic Association</i>, 2023+.
 </p> 
 	
 <p> 
