--- a/publications.html
+++ b/publications.html
@@ -54,18 +54,19 @@
 <p>
 
 
-
-
-<a href="preprints/markov/dynamics.pdf">Identification of mixtures of dynamic discrete choices</a>. <i>Journal of Econometrics</i>, forthcoming. (with Ayden Higgins)
-
-<br><br>	
-<a href="publications/peer effects/interference.pdf">Peer effects and endogenous social interactions</a>. <i>Journal of Econometrics</i>, forthcoming. [<a href="publications/peer effects/matlab.zip">replication files</a>, <a href="publications/peer effects/ivnet.zip">Stata implementation</a>, <a href="publications/peer effects/DGP.do">dgp.do for Stata help file</a>]
+<a href="publications/markov/dynamics.pdf">Identification of mixtures of dynamic discrete choices</a>. <i>Journal of Econometrics</i>, forthcoming. (with Ayden Higgins)
 
 <br><br>	
 <a href="publications/noise/noise_revision.pdf">Inference on a distribution from noisy draws</a>. <i>Econometric Theory</i>, forthcoming. (with Martin Weidner)
 
 <br><br>
-<a href="publication/rassign/exclusionbias.pdf">Testing random assignment to peer groups</a>. <i>Journal of Applied Econometrics</i> 38, 321-333.
+<a href="publications/dyadic/beta_model.pdf">Modified-likelihood estimation of fixed-effect models for dyadic data</a>. <i>SERIEs - Journal of the Spanish Economic Association</i>, forthcoming. Special issue in honor of Manuel Arellano
+
+<br><br>	
+<a href="publications/peer effects/interference.pdf">Peer effects and endogenous social interactions</a>. <i>Journal of Econometrics</i> 235,1203-1214. [<a href="publications/peer effects/matlab.zip">replication files</a>, <a href="publications/peer effects/ivnet.zip">Stata implementation</a>, <a href="publications/peer effects/DGP.do">dgp.do for Stata help file</a>]
+
+<br><br>
+<a href="publications/rassign/exclusionbias.pdf">Testing random assignment to peer groups</a>. <i>Journal of Applied Econometrics</i> 38, 321-333.
 [<a href="publications/rassign/exclusionbias appendix.pdf">supplement</a>,
 <a href="publications/rassign/rassign.zip">Stata implementation and replication files</a>]
 			
@@ -115,7 +116,7 @@
 
 <br><br>
 <a href="publications/two-way likelihood corrections/likelihoodcorrection.pdf">Likelihood corrections for two-way models</a>.
-<i>Annals of Economics and Statistics</i> 134, 227–242. (with Taisuke Otsu)
+<i>Annals of Economics and Statistics</i> 134, 227–242. Special issue on panel data (with Taisuke Otsu)
 
 <br><br>
 <a href="publications/network formation/logit 2nd revision.pdf">Semiparametric analysis of network formation</a>.
