--- a/classes.html
+++ b/classes.html
@@ -88,17 +88,13 @@ Difference and differential equations, MRes Prep Class, University of Cambridge
 <a href="class notes/Diff equations/slides.pdf">Lecture slides</a>
 
 <br><br>
-Panel Data, M2 ETE, TSE
+Panel Data and Network Data, M2 ETE, TSE
 
 <br>
-<a href="class notes/M2 Econometrics 2/slides.pdf">Lecture slides</a>
-
-
-<br><br>
-Nonlinear Models for Panel Data, MRes, TSE
-
+<a href="class notes/M2 Econometrics 2/slides1.pdf">Lecture slides on panel data</a>
 <br>
-<a href="class notes/MRes Nonlinear panel data/slides1.pdf">Lecture slides</a>
+<a href="class notes/M2 Econometrics 2/slides2.pdf">Lecture slides on network data</a>
+
 
 </p>
 
