--- a/preprints.html
+++ b/preprints.html
@@ -60,14 +60,11 @@
 [<a href="preprints/panel bootstrap/panel_bstrap_supplement.pdf">supplement</a>]
 	
 <br><br>	
-<a href="preprints/blockmodel/blockmodel.pdf">Estimation and inference for stochastic block models</a>. 
+<a href="preprints/blockmodel/blockmodel.pdf">Estimation and inference for stochastic block models</a>. Under revision for <i>Journal of Econometrics</i>.
 [<a href="preprints/blockmodel/blockmodel_supplement.pdf">supplement</a>]
 
 <br><br>
 <a href="preprints/AJADE/JASYD.pdf">Joint approximate asymmetric diagonalization by non-orthogonal matrices</a>. (with Ayden Higgins)
-
-<br><br>
-<a href="preprints/dyadic/beta_model.pdf">Modified-likelihood estimation of fixed-effect models for dyadic data</a>.
 
 <br><br>
 <a href="preprints/score adjustments/Dhaene-Jochmans adjscore.pdf">Profile-score adjustments for incidental-parameter problems</a>. (with Geert Dhaene)
