--- a/erc.html
+++ b/erc.html
@@ -52,12 +52,14 @@
 <section>
 <p>&nbsp</p>
 
-
 <b> Inference in Microeconometric Models (MiMo) </b>
 <br>
 ERC Starting Grant 715787 (2017--2022)
 
-<br><br>
+<p>
+<img align="justify" src="erclogo2.png" alt="ERC" width="400" height="250">
+</p>
+
 
 <p align="justify", style="text-left:40px"> Unobserved differences between economic agents
 are an important driver behind the differences in their economic outcomes such as schooling
