--- a/erc2.html
+++ b/erc2.html
@@ -57,7 +57,12 @@
 <br>
 ERC Consolidator Grant 101044319 (2023--2027)
 
-<br><br>
+
+
+<p>
+<img align="justify" src="erclogo2.png" alt="ERC" width="400" height="250">
+</p>
+
 
 <p align="justify", style="text-left:40px"> 
 
