--- a/preprints.html
+++ b/preprints.html
@@ -53,11 +53,11 @@
 
 <p>
 
-<a href="preprints/markov/markov switching.pdf">Learning Markov processes with latent variables from longitudinal data</a>. (with Ayden Higgins)
+<a href="preprints/markov/markov switching.pdf">Learning Markov processes with latent variables from longitudinal data</a>. Under revision for <i>Econometric Theory</i>. (with Ayden Higgins)
 
 <br><br>
 <a href="preprints/panel bootstrap/panel_bstrap.pdf">Bootstrap inference for fixed-effect models</a>. Resubmitted to <i>Econometrica</i>. (with Ayden Higgins)	
-[<a href="preprints/panel bootstrap/panel_bstrap_supplement.pdf">supplement</a>]
+[<a href="preprints/panel bootstrap/panel_bstrap_supplement.pdf">supplement</a>, <a href="preprints/panel bootstrap/panel_bstrap_examples.pdf">examples</a>]
 	
 <br><br>	
 <a href="preprints/blockmodel/blockmodel.pdf">Estimation and inference for stochastic block models</a>. Under revision for <i>Journal of Econometrics</i>.
