--- a/preprints.html
+++ b/preprints.html
@@ -52,7 +52,10 @@
 
 
 <p>
+	
+<a href="preprints/Judges/judges.pdf">Many (weak) judges in judge-leniency designs</a>.
 
+<br><br>
 <a href="preprints/markov/markov switching.pdf">Learning Markov processes with latent variables from longitudinal data</a>. Under revision for <i>Econometric Theory</i>. (with Ayden Higgins)
 
 <br><br>
