--- a/classes.html
+++ b/classes.html
@@ -91,9 +91,9 @@ Difference and differential equations, MRes Prep Class, University of Cambridge
 Panel Data and Network Data, M2 ETE, TSE
 
 <br>
-<a href="class notes/M2 Econometrics 2/slides1.pdf">Lecture slides on panel data</a>
+<a href="class notes/M2 Econometrics 2/slides1.pdf">Lecture slides, Part 1</a>
 <br>
-<a href="class notes/M2 Econometrics 2/slides2.pdf">Lecture slides on network data</a>
+<a href="class notes/M2 Econometrics 2/slides2.pdf">Lecture slides, Part 2</a>
 
 
 </p>
