--- a/erc.html
+++ b/erc.html
@@ -92,12 +92,12 @@ A. Higgins and K. Jochmans.
 
 <p> 
 A. Higgins and K. Jochmans. 
-<a href="preprints/panel bootstrap/panel_bstrap.pdf">Bootstrap inference for fixed-effect models</a>. Preprint. 2022.
+<a href="preprints/panel bootstrap/panel_bstrap.pdf">Bootstrap inference for fixed-effect models</a>. Preprint. 2023.
 </p> 
 
 <p> 	
 A. Higgins and K. Jochmans. 
-<a href="preprints/markov/dynamics.pdf">Identification of mixtures of dynamic discrete choices</a>. Forthcoming in <i>Journal of Econometrics</i>, 2023+.
+<a href="preprints/markov/dynamics.pdf">Identification of mixtures of dynamic discrete choices</a>.  <i>Journal of Econometrics</i> 237, 105462.
 </p> 
 	
 <p> 
@@ -161,8 +161,7 @@ K. Jochmans and T. Otsu. <a href="publications/two-way likelihood corrections/li
 </p> 
 
 <p> 
-K. Jochmans. 
-<a href="publications/dyadic/SERIEs.pdf">Modified-likelihood estimation of fixed-effect models for dyadic data</a>. Forthcoming in <i>SERIEs - Journal of the Spanish Economic Association</i>, 2023+.
+K. Jochmans. <a href="publications/dyadic/SERIEs.pdf">Modified-likelihood estimation of fixed-effect models for dyadic data</a>. <i>SERIEs - Journal of the Spanish Economic Association</i> 14, 417-433.
 </p> 
 	
 <p> 
