--- a/publications.html
+++ b/publications.html
@@ -54,13 +54,14 @@
 <p>
 
 
-<a href="publications/markov/dynamics.pdf">Identification of mixtures of dynamic discrete choices</a>. <i>Journal of Econometrics</i>, forthcoming. (with Ayden Higgins)
 
-<br><br>	
 <a href="publications/noise/noise_revision.pdf">Inference on a distribution from noisy draws</a>. <i>Econometric Theory</i>, forthcoming. (with Martin Weidner)
 
 <br><br>
-<a href="publications/dyadic/beta_model.pdf">Modified-likelihood estimation of fixed-effect models for dyadic data</a>. <i>SERIEs - Journal of the Spanish Economic Association</i>, forthcoming. Special issue in honor of Manuel Arellano
+<a href="publications/dyadic/beta_model.pdf">Modified-likelihood estimation of fixed-effect models for dyadic data</a>. <i>SERIEs - Journal of the Spanish Economic Association</i> 14, 417-433. Special issue in honor of Manuel Arellano
+
+<br><br>	
+<a href="publications/markov/dynamics.pdf">Identification of mixtures of dynamic discrete choices</a>. <i>Journal of Econometrics</i> 237, 105462. (with Ayden Higgins)
 
 <br><br>	
 <a href="publications/peer effects/interference.pdf">Peer effects and endogenous social interactions</a>. <i>Journal of Econometrics</i> 235,1203-1214. [<a href="publications/peer effects/matlab.zip">replication files</a>, <a href="publications/peer effects/ivnet.zip">Stata implementation</a>, <a href="publications/peer effects/DGP.do">dgp.do for Stata help file</a>]
