--- a/erc.html
+++ b/erc.html
@@ -57,7 +57,7 @@
 ERC Starting Grant 715787 (2017--2022)
 
 <p>
-<img align="justify" src="erclogo2.png" alt="ERC" width="400" height="250">
+<img align="right" src="erclogo2.png" alt="ERC" width="300" height="200">
 </p>
 
 
@@ -87,17 +87,17 @@ they will be applied to various empirical problems.</p>
 
 <p> 
 A. Higgins and K. Jochmans. 
-<a href="preprints/markov/markov switching.pdf">Learning Markov processes with latent variables from longitudinal data</a>. Preprint 2022.
+<a href="preprints/markov/markov switching.pdf">Learning Markov processes with latent variables from longitudinal data</a>. Preprint, 2022.
 </p> 
 
 <p> 
 A. Higgins and K. Jochmans. 
-<a href="preprints/panel bootstrap/panel_bstrap.pdf">Bootstrap inference for fixed-effect models</a>. Preprint. 2023.
+<a href="publications/panel bootstrap/panel_bstrap.pdf">Bootstrap inference for fixed-effect models</a>. Forthcoming in <i>Econometrica</i>, 2024+.
 </p> 
 
 <p> 	
 A. Higgins and K. Jochmans. 
-<a href="preprints/markov/dynamics.pdf">Identification of mixtures of dynamic discrete choices</a>.  <i>Journal of Econometrics</i> 237, 105462.
+<a href="preprints/markov/dynamics.pdf">Identification of mixtures of dynamic discrete choices</a>. <i>Journal of Econometrics</i> 237, 105462.
 </p> 
 	
 <p> 
