--- a/erc2.html
+++ b/erc2.html
@@ -60,7 +60,7 @@ ERC Consolidator Grant 101044319 (2023--2027)
 
 
 <p>
-<img align="justify" src="erclogo2.png" alt="ERC" width="400" height="250">
+<img align="right" src="erclogo2.png" alt="ERC" width="300" height="200">
 </p>
 
 
@@ -91,11 +91,6 @@ interactions,  where interference  on unobservable  confounders is  an issue.  F
 where data limitations prevent a  fully nonparametric approach, instrumental-variable methods
 that  build on  flexible  functional form  restrictions will  be  developed. 
 
-<br><br>
-The  statistical
-properties  of the  proposed  estimators will  be derived,  software  implementation will  be
-provided, and  empirical illustrations will be  presented to highlight the  usefulness of the
-methods.
 
 
 
