--- a/index.html
+++ b/index.html
@@ -70,13 +70,19 @@ Tel: +33 (0)5 61 12 88 78 <br>
 Email: koen [dot] jochmans [at] tse-fr [dot] eu        
 </p>
 
+<br>
+<img align="left"  src="tselogo.jpg"  alt="TSE" width="275">
+<img align="right"  src="erclogo.jpg"  alt="ERC" width="180">
+
+ 
+
+<!-- ><p>I am ...
 <p>
-<img align="left" src="tselogo.jpg" alt="TSE" width="210" height="140">
-<img align="right" src="erclogo.jpg" alt="ERC" width="210" height="140">
+<img align="left"  src="tselogo.jpg" alt="TSE" width="190" height="120">
+<img align="right" src="erclogo2.jpg" alt="ERC" width="300" height="200">
 </p>
-
-
-<!-- ><p>I am ...</p> -->
+<img align="right" src="erclogo2.jpg" alt="ERC" width="190" height="120">
+</p> -->
 
 
 
