--- a/publications.html
+++ b/publications.html
@@ -53,8 +53,10 @@
 
 <p>
 
+<a href="publications/panel bootstrap/panel_bstrap.pdf">Bootstrap inference for fixed-effect models</a>. <i>Econometrica</i>, forthcoming. (with Ayden Higgins)	
+[<a href="publications/panel bootstrap/panel_bstrap_supplement.pdf">supplement</a>, <a href="publications/panel bootstrap/panel_bstrap_examples.pdf">examples</a>, <a href="publications/panel bootstrap/replication_package.zip">replication files</a>]
 
-
+<br><br>
 <a href="publications/noise/noise_revision.pdf">Inference on a distribution from noisy draws</a>. <i>Econometric Theory</i>, forthcoming. (with Martin Weidner)
 
 <br><br>
