--- a/erc.html
+++ b/erc.html
@@ -116,7 +116,7 @@ A. Higgins.
 </p> 
 
 <p>  
-K. Jochmans and M. Weidner. <a href="publications/noise/noise_revision.pdf">Inference on a distribution from noisy draws</a>. Forthcoming in <i>Econometric Theory</i>, 2022+.
+K. Jochmans and M. Weidner. <a href="publications/noise/noise_revision.pdf">Inference on a distribution from noisy draws</a>. <i>Econometric Theory</i> 40, 60-97.
 </p> 
 	
 <p> 
