--- a/publications.html
+++ b/publications.html
@@ -57,7 +57,7 @@
 [<a href="publications/panel bootstrap/panel_bstrap_supplement.pdf">supplement</a>, <a href="publications/panel bootstrap/panel_bstrap_examples.pdf">examples</a>, <a href="publications/panel bootstrap/replication_package.zip">replication files</a>]
 
 <br><br>
-<a href="publications/noise/noise_revision.pdf">Inference on a distribution from noisy draws</a>. <i>Econometric Theory</i>, forthcoming. (with Martin Weidner)
+<a href="publications/noise/noise_revision.pdf">Inference on a distribution from noisy draws</a>. <i>Econometric Theory</i> 40, 61-97. (with Martin Weidner)
 
 <br><br>
 <a href="publications/dyadic/beta_model.pdf">Modified-likelihood estimation of fixed-effect models for dyadic data</a>. <i>SERIEs - Journal of the Spanish Economic Association</i> 14, 417-433. Special issue in honor of Manuel Arellano
