--- a/preprints.html
+++ b/preprints.html
@@ -59,8 +59,7 @@
 <a href="preprints/markov/markov switching.pdf">Learning Markov processes with latent variables from longitudinal data</a>. Under revision for <i>Econometric Theory</i>. (with Ayden Higgins)
 	
 <br><br>	
-<a href="preprints/blockmodel/blockmodel.pdf">Estimation and inference for stochastic block models</a>. Under revision for <i>Journal of Econometrics</i>.
-[<a href="preprints/blockmodel/blockmodel_supplement.pdf">supplement</a>]
+<a href="preprints/blockmodel/blockmodel revision.pdf">Estimation and inference for stochastic block models</a>. Resubmitted to <i>Journal of Econometrics</i>.
 
 <br><br>
 <a href="preprints/AJADE/JASYD.pdf">Joint approximate asymmetric diagonalization by non-orthogonal matrices</a>. (with Ayden Higgins)
