--- a/classes.html
+++ b/classes.html
@@ -12,17 +12,7 @@
  <link rel="stylesheet" href="styles.css">
 
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-3GX20FENSV"></script>
-	<script>
-	  window.dataLayer = window.dataLayer || [];
-	  function gtag(){dataLayer.push(arguments);}
-	  gtag('js', new Date());
 
-	  gtag('config', 'G-3GX20FENSV');
-	</script>
-	  
   </head>
   
 <body>
@@ -87,6 +77,16 @@ Difference and differential equations, MRes Prep Class, University of Cambridge
 <br>
 <a href="class notes/Diff equations/slides.pdf">Lecture slides</a>
 
+
+<br><br>
+Intermediate Econometrics, M1, TSE
+
+<br>
+The course material is made available via Moodle. The reference text is Hansen (2022, Econometrics, Princeton University Press).
+
+<br>
+The prerequisites for this course are a course in elementary statistics and an introductory course in econometrics at the level of Chapters 1 to 6 in Hansen. Your understanding of this material is taken as given at the start of the course.  A 15h refresher course takes place at the end of August prior to the start of the academic year.
+
 <br><br>
 Panel Data and Network Data, M2 ETE, TSE
 
@@ -94,6 +94,7 @@ Panel Data and Network Data, M2 ETE, TSE
 <a href="class notes/M2 Econometrics 2/slides1.pdf">Lecture slides, Part 1</a>
 <br>
 <a href="class notes/M2 Econometrics 2/slides2.pdf">Lecture slides, Part 2</a>
+
 
 
 </p>
