--- a/erc.html
+++ b/erc.html
@@ -13,15 +13,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-3GX20FENSV"></script>
-	<script>
-	  window.dataLayer = window.dataLayer || [];
-	  function gtag(){dataLayer.push(arguments);}
-	  gtag('js', new Date());
 
-	  gtag('config', 'G-3GX20FENSV');
-	</script>
 	  
   </head>
   
@@ -87,12 +79,12 @@ they will be applied to various empirical problems.</p>
 
 <p> 
 A. Higgins and K. Jochmans. 
-<a href="preprints/markov/markov switching.pdf">Learning Markov processes with latent variables from longitudinal data</a>. Preprint, 2022.
+<a href="preprints/markov/ET revision.pdf">Learning Markov processes with latent variables</a>. Preprint, 2024.
 </p> 
 
 <p> 
 A. Higgins and K. Jochmans. 
-<a href="publications/panel bootstrap/panel_bstrap.pdf">Bootstrap inference for fixed-effect models</a>. Forthcoming in <i>Econometrica</i>, 2024+.
+<a href="publications/panel bootstrap/panel_bstrap.pdf">Bootstrap inference for fixed-effect models</a>. <i>Econometrica</i> 92, 411-427.
 </p> 
 
 <p> 	
