--- a/publications.html
+++ b/publications.html
@@ -13,16 +13,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-3GX20FENSV"></script>
-	<script>
-	  window.dataLayer = window.dataLayer || [];
-	  function gtag(){dataLayer.push(arguments);}
-	  gtag('js', new Date());
 
-	  gtag('config', 'G-3GX20FENSV');
-	</script>
-	  
   </head>
   
 <body>
@@ -53,7 +44,10 @@
 
 <p>
 
-<a href="publications/panel bootstrap/panel_bstrap.pdf">Bootstrap inference for fixed-effect models</a>. <i>Econometrica</i>, forthcoming. (with Ayden Higgins)	
+<a href="publications/blockmodel/blockmodel revision.pdf">Nonparametric identification and estimation of stochastic block models from many small networks</a>. <i>Journal of Econometrics</i>, forthcoming.
+
+<br><br>	
+<a href="publications/panel bootstrap/panel_bstrap.pdf">Bootstrap inference for fixed-effect models</a>. <i>Econometrica</i> 92, 411-427. (with Ayden Higgins)	
 [<a href="publications/panel bootstrap/panel_bstrap_supplement.pdf">supplement</a>, <a href="publications/panel bootstrap/panel_bstrap_examples.pdf">examples</a>, <a href="publications/panel bootstrap/replication_package.zip">replication files</a>]
 
 <br><br>
