--- a/preprints.html
+++ b/preprints.html
@@ -13,16 +13,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-3GX20FENSV"></script>
-	<script>
-	  window.dataLayer = window.dataLayer || [];
-	  function gtag(){dataLayer.push(arguments);}
-	  gtag('js', new Date());
 
-	  gtag('config', 'G-3GX20FENSV');
-	</script>
-	  
   </head>
   
 <body>
@@ -56,11 +47,8 @@
 <a href="preprints/Judges/judges.pdf">Many (weak) judges in judge-leniency designs</a>.
 
 <br><br>
-<a href="preprints/markov/markov switching.pdf">Learning Markov processes with latent variables from longitudinal data</a>. Under revision for <i>Econometric Theory</i>. (with Ayden Higgins)
+<a href="preprints/markov/ET revision.pdf">Learning Markov processes with latent variables</a>. Resubmitted to <i>Econometric Theory</i>. (with Ayden Higgins)
 	
-<br><br>	
-<a href="preprints/blockmodel/blockmodel revision.pdf">Estimation and inference for stochastic block models</a>. Resubmitted to <i>Journal of Econometrics</i>.
-
 <br><br>
 <a href="preprints/AJADE/JASYD.pdf">Joint approximate asymmetric diagonalization by non-orthogonal matrices</a>. (with Ayden Higgins)
 
