mise a jour  dec24

--- a/classes.html
+++ b/classes.html
@@ -82,10 +82,22 @@ Difference and differential equations, MRes Prep Class, University of Cambridge
 Intermediate Econometrics, M1, TSE
 
 <br>
-The course material is made available via Moodle. The reference text is Hansen (2022, Econometrics, Princeton University Press).
+The course material is made available via Moodle. The reference text is Hansen (2022, Econometrics, Princeton University Press). The prerequisites for this course are a course in elementary statistics and an introductory course in econometrics at the level of Chapters 1 to 6 in Hansen. Your understanding of this material is taken as given at the start of the course.  A refresher course takes place at the end of August prior to the start of the academic year.
 
 <br>
-The prerequisites for this course are a course in elementary statistics and an introductory course in econometrics at the level of Chapters 1 to 6 in Hansen. Your understanding of this material is taken as given at the start of the course.  A 15h refresher course takes place at the end of August prior to the start of the academic year.
+The following slides were used in 2024. These are subject to change and are given as indication only. 
+
+<br><a href="class notes/M1/1.pdf">The linear model</a>
+<br><a href="class notes/M1/2.pdf">Large-sample theory</a>
+<br><a href="class notes/M1/3.pdf">Ordinary least squares</a>
+<br><a href="class notes/M1/4.pdf">Hypothesis testing</a>
+<br><a href="class notes/M1/5.pdf">Instrumental variables</a>
+<br><a href="class notes/M1/6.pdf">Nonlinear least squares</a>
+<br><a href="class notes/M1/7.pdf">Binary choice</a>
+<br><a href="class notes/M1/8.pdf">Classical linear regression and tobit</a>
+<br><a href="class notes/M1/9.pdf">Asymptotics for estimators of nonlinear models</a>
+
+
 
 <br><br>
 Panel Data and Network Data, M2 ETE, TSE
