--- a/preprints.html
+++ b/preprints.html
@@ -43,11 +43,15 @@
 
 
 <p>
-	
-<a href="preprints/Judges/judges.pdf">Many (weak) judges in judge-leniency designs</a>.
 
-<br><br>
-<a href="preprints/markov/ET revision.pdf">Learning Markov processes with latent variables</a>. Resubmitted to <i>Econometric Theory</i>. (with Ayden Higgins)
+<a href="preprints/neyman/neyman.pdf">A Neyman-orthogonalization approach to the incidental-parameter problem</a>. (with Stéphane Bonhomme and Martin Weidner)
+[<a href="preprints/neyman/slides.pdf">slides</a> with expressions for the unconditional scalar case]
+
+<br><br>	
+<a href="preprints/twowaymodel/twowaymodel.pdf">Nonparametric identification of models for dyadic data</a>. (with Paul Diegert)
+
+<br><br>	
+<a href="preprints/Judges/judges.pdf">Many (weak) judges in judge-leniency designs</a>.
 	
 <br><br>
 <a href="preprints/AJADE/JASYD.pdf">Joint approximate asymmetric diagonalization by non-orthogonal matrices</a>. (with Ayden Higgins)
