--- a/publications.html
+++ b/publications.html
@@ -44,7 +44,11 @@
 
 <p>
 
-<a href="publications/blockmodel/blockmodel revision.pdf">Nonparametric identification and estimation of stochastic block models from many small networks</a>. <i>Journal of Econometrics</i>, forthcoming.
+<a href="publications/markov/ET revision.pdf">Learning Markov processes with latent variables</a>.  <i>Econometric Theory</i>, conditionally accepted. (with Ayden Higgins)
+
+
+<br><br>
+<a href="publications/blockmodel/blockmodel revision.pdf">Nonparametric identification and estimation of stochastic block models from many small networks</a>. <i>Journal of Econometrics</i> 242, 105805.
 
 <br><br>	
 <a href="publications/panel bootstrap/panel_bstrap.pdf">Bootstrap inference for fixed-effect models</a>. <i>Econometrica</i> 92, 411-427. (with Ayden Higgins)	
