--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
 	
 <p>&nbsp</p>
 
-
 <p class="view"><a href="http://jochmans.github.io/">Home</small></a></p>
 <p class="view"><a href="cv/CV.pdf">Curriculum vitae</a></p>
 <p class="view"><a href="publications.html">Publications</a></p>
@@ -47,7 +46,6 @@
 <p>
 <img align="right" src="jochmans.jpg" alt="Koen Jochmans" width="170" height="165" hspace="30">
 
-
 Toulouse School of Economics <br>
 1 esplanade de l'Université <br>
 31080 Toulouse CEDEX 6 <br>
@@ -59,24 +57,22 @@ Tel: +33 (0)5 61 12 88 78 <br>
 Email: koen [dot] jochmans [at] tse-fr [dot] eu        
 </p>
 
+<!-- >
 <br>
 <img align="left"  src="tselogo.jpg"  alt="TSE" width="275">
 <img align="right"  src="erclogo.jpg"  alt="ERC" width="180">
+-->
 
- 
-
-<!-- ><p>I am ...
-<p>
-<img align="left"  src="tselogo.jpg" alt="TSE" width="190" height="120">
-<img align="right" src="erclogo2.jpg" alt="ERC" width="300" height="200">
-</p>
-<img align="right" src="erclogo2.jpg" alt="ERC" width="190" height="120">
-</p> -->
-
-
-
-
-
+<!-- > 
+<br>
+<a href="https://www.tandfonline.com/journals/lecr20">Econometric Reviews</small></a>
+<br>
+<a href="https://academic.oup.com/ectj?login=false">Econometrics Journal</small></a>
+<br>
+<a href="https://onlinelibrary.wiley.com/journal/10991255">Journal of Applied Econometrics</small></a>
+<br>
+<a href="https://www.tandfonline.com/journals/ubes20">Journal of Business and Economic Statistics</small></a>
+-->
 
 </section>
       
