--- a/preprints.html
+++ b/preprints.html
@@ -44,8 +44,12 @@
 
 <p>
 
+
+<a href="preprints/MBB/MBB.pdf">Inference in dynamic models for panel data using the moving block bootstrap</a>. (with Ayden Higgins)
+
+<br><br>
 <a href="preprints/neyman/neyman.pdf">A Neyman-orthogonalization approach to the incidental-parameter problem</a>. (with Stéphane Bonhomme and Martin Weidner)
-[<a href="preprints/neyman/slides.pdf">slides</a> with expressions for the unconditional scalar case]
+
 
 <br><br>	
 <a href="preprints/twowaymodel/twowaymodel.pdf">Nonparametric identification of models for dyadic data</a>. (with Paul Diegert)
