--- a/publications.html
+++ b/publications.html
@@ -44,7 +44,7 @@
 
 <p>
 
-<a href="publications/markov/ET revision.pdf">Learning Markov processes with latent variables</a>.  <i>Econometric Theory</i>, conditionally accepted. (with Ayden Higgins)
+<a href="publications/markov/ET revision.pdf">Learning Markov processes with latent variables</a>.  <i>Econometric Theory</i>, forthcoming. (with Ayden Higgins)
 
 
 <br><br>
@@ -94,8 +94,7 @@
 <a href="publications/error components/cluster.pdf">Testing for correlation in error-component models</a>.
 <i>Journal of Applied Econometrics</i> 35, 860–878.
 
-[<a href="publications/error components/dynamic example.pdf">supplement</a>,
-<a href="publications/error components/replication material JAE.zip">replication files</a>, <a href="https://econpapers.repec.org/software/bocbocode/s458642.htm">Stata implementation</a>]
+[<a href="publications/error components/replication material JAE.zip">replication files</a>, <a href="https://econpapers.repec.org/software/bocbocode/s458642.htm">Stata implementation</a>]
 
 <br><br>
 <a href="publications/twgravity/twexp_twgravity - stata.pdf">twexp and twgravity: Fitting exponential regression models with two-way fixed effects</a>.
