--- a/erc.html
+++ b/erc.html
@@ -79,7 +79,7 @@ they will be applied to various empirical problems.</p>
 
 <p> 
 A. Higgins and K. Jochmans. 
-<a href="preprints/markov/ET revision.pdf">Learning Markov processes with latent variables</a>. <i>Econometric Theory</i>, conditionally accepted.
+<a href="preprints/markov/ET revision.pdf">Learning Markov processes with latent variables</a>. <i>Econometric Theory</i>, forthcoming.
 </p> 
 
 <p> 
