--- a/index.html
+++ b/index.html
@@ -63,16 +63,18 @@ Email: koen [dot] jochmans [at] tse-fr [dot] eu
 <img align="right"  src="erclogo.jpg"  alt="ERC" width="180">
 -->
 
-<!-- > 
+
 <br>
-<a href="https://www.tandfonline.com/journals/lecr20">Econometric Reviews</small></a>
+Professor of Economics at <a href="https://www.tse-fr.eu">Toulouse School of Economics</small></a>
+<br> 
+Associate Editor for <a href="https://www.tandfonline.com/journals/lecr20">Econometric Reviews</small></a>
 <br>
-<a href="https://academic.oup.com/ectj?login=false">Econometrics Journal</small></a>
+Associate Editor for  <a href="https://academic.oup.com/ectj?login=false">Econometrics Journal</small></a>
 <br>
-<a href="https://onlinelibrary.wiley.com/journal/10991255">Journal of Applied Econometrics</small></a>
+Associate Editor for  <a href="https://onlinelibrary.wiley.com/journal/10991255">Journal of Applied Econometrics</small></a>
 <br>
-<a href="https://www.tandfonline.com/journals/ubes20">Journal of Business and Economic Statistics</small></a>
--->
+Associate Editor for  <a href="https://www.tandfonline.com/journals/ubes20">Journal of Business and Economic Statistics</small></a>
+
 
 </section>
       
