--- a/publications.html
+++ b/publications.html
@@ -184,7 +184,7 @@
 
 <br><br>
 <a href="publications/pairwise comparisons/pairwise-comparison.pdf">Pairwise-comparison estimation with nonparametric controls</a>.
-<i>Econometrics Journal</i> 16, 340–372.
+<i>Econometrics Journal</i> 16, 340–372. Denis Sargan Econometrics Prize winner 2013.
 
 <br><br>
 <a href="publications/transformation model/Influence9.pdf">The variance of a rank estimator of transformation models</a>.
