--- a/preprints.html
+++ b/preprints.html
@@ -44,7 +44,9 @@
 
 <p>
 
+<a href="preprints/workerfirm/workerfirm.pdf">Identification in models for matched worker-firm data with two-sided random effects</a>.
 
+<br><br>
 <a href="preprints/MBB/MBB.pdf">Inference in dynamic models for panel data using the moving block bootstrap</a>. (with Ayden Higgins)
 
 <br><br>
