--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ Associate Editor for  <a href="https://academic.oup.com/ectj?login=false">Econom
 <br>
 Associate Editor for  <a href="https://onlinelibrary.wiley.com/journal/10991255">Journal of Applied Econometrics</small></a>
 <br>
-Associate Editor for  <a href="https://www.tandfonline.com/journals/ubes20">Journal of Business and Economic Statistics</small></a>
+Associate Editor for  <a href="https://www.tandfonline.com/journals/ubes20">Journal of Business & Economic Statistics</small></a>
 
 
 </section>
@@ -81,6 +81,24 @@ Associate Editor for  <a href="https://www.tandfonline.com/journals/ubes20">Jour
 <!-- > <section>	</section> -->
 
 
+
+
+
+<!-- Default Statcounter code for personal website https://jochmans.github.io/
+-->
+<script type="text/javascript">
+var sc_project=13164256; 
+var sc_invisible=1; 
+var sc_security="58e33610"; 
+</script>
+<script type="text/javascript"
+src="https://www.statcounter.com/counter/counter.js" async></script>
+<noscript><div class="statcounter"><a title="Web Analytics Made Easy -
+Statcounter" href="https://statcounter.com/" target="_blank"><img
+class="statcounter" src="https://c.statcounter.com/13164256/0/58e33610/1/"
+alt="Web Analytics Made Easy - Statcounter"
+referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
+<!-- End of Statcounter Code -->
 
 </body>
   
