--- a/preprints.html
+++ b/preprints.html
@@ -50,7 +50,7 @@
 <a href="preprints/MBB/MBB.pdf">Inference in dynamic models for panel data using the moving block bootstrap</a>. (with Ayden Higgins)
 
 <br><br>
-<a href="preprints/neyman/neyman.pdf">A Neyman-orthogonalization approach to the incidental-parameter problem</a>. (with Stéphane Bonhomme and Martin Weidner)
+<a href="preprints/neyman/neyman.pdf">A Neyman-orthogonalization approach to the incidental-parameter problem</a>. Under revision for <i>Econometrica</i>. (with Stéphane Bonhomme and Martin Weidner)
 
 
 <br><br>	
